basic build implemented.  Trimmed down options.js for testing

--- a/app/pages/options.html
+++ b/app/pages/options.html
@@ -4,13 +4,16 @@
     <title>Smoothie - Options</title>
     <script type="text/javascript" src="/js/lib/angular.min.js"></script>
     <script type="text/javascript" src="/js/lib/md5.js"></script>
+    <script type="text/javascript" src="/js/chrome.js"></script>
     <script type="text/javascript" src="/js/store.js"></script>
     <script type="text/javascript" src="/js/rtm.js"></script>
     <script type="text/javascript" src="/js/options.js"></script>
 </head>
 <body>
     <div ng-controller="auth">
-        <button ng-click="authorise()">Authorise</button>
+        <button ng-click="auth()">
+            {{ hasAuth && 'Unauthorise' || 'Authorise' }}
+        </button>
     </div>
 </body>
 </html>
